# cement

./: Cargo.toml  README.md  justfile
migrations/2023-11-06-021122_create_idioms/: down.sql  up.sql
src/: app.rs  cli.rs  connection.rs  main.rs  models.rs  schema.rs
