[package]
name = "cement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
diesel = { version = "2.1.3", features = ["chrono", "sqlite"] }
dotenvy = "0.15.7"
serde = { version = "1.0.192", features =["derive"] }
serde_json = "1.0.108"
